--- a/public/locales/en/all.json
+++ b/public/locales/en/all.json
@@ -23,5 +23,14 @@
   "500": {
     "title": "System Error",
     "description": "Description about system error"
+  },
+  "pillKnowledgeTest": {
+    "questionTitle": "( )に当てはまるのは？",
+    "questionContent": "Enter the text of the test question here.",
+    "diagramInfoText": "with diagram 16:9",
+    "answer1": "Answer 1 text",
+    "answer2": "Answer 2 text",
+    "answer3": "Answer 3 text",
+    "answer4": "Answer 4 text"
   }
 }
