--- a/public/locales/en/all.json
+++ b/public/locales/en/all.json
@@ -9,6 +9,23 @@
       "news": "News"
     }
   },
+  "pillKnowledgeTestPage": {
+    "back": "Back",
+    "questionCounter": "{{current}}/{{total}}",
+    "diagramInfo": "with diagram 16:9"
+  }
+}
+{
+  "common": {
+    "loading": "Loading...",
+    "go_to_home": "Go to home",
+    "menu": {
+      "home": "Home",
+      "about": "About",
+      "contact_us": "Contact us",
+      "news": "News"
+    }
+  },
   "example": {
     "login": "Login",
     "logout": "Logout",
