--- a/public/locales/en/all.json
+++ b/public/locales/en/all.json
@@ -1,27 +1,18 @@
 {
-  "common": {
-    "loading": "Loading...",
-    "go_to_home": "Go to home",
-    "menu": {
-      "home": "Home",
-      "about": "About",
-      "contact_us": "Contact us",
-      "news": "News"
-    }
+  "ResultPage": {
+    "complete": "Complete",
+    "thank_you": "Thank you for your hard work!",
+    "badge": "Badge",
+    "knowledge_level": "Pill Knowledge Level",
+    "gold": "Gold",
+    "advice": "First, make sure to master the correct way to take it. If you're unsure, don't hesitate to check with your doctor.",
+    "review_results": "Review Test Results"
   },
-  "example": {
-    "login": "Login",
-    "logout": "Logout",
-    "next": "Next",
-    "login_success": "Login success!",
-    "logout_success": "Logout success!"
+  "button": {
+    "reviewResults": "Review Results"
   },
-  "404": {
-    "title": "Page Not Found",
-    "description": "Description about page not found"
-  },
-  "500": {
-    "title": "System Error",
-    "description": "Description about system error"
+  "score": {
+    "points": "points",
+    "divider": "/"
   }
 }
